--- a/literatur.bib
+++ b/literatur.bib
@@ -75,17 +75,18 @@
   publisher={Oxford Univ Press}
 }
 
-@article{ fatcat,
-                author = "Yuzhen Ye, Adam Godzik",
-                title = "Flexible structure alignment by chaining aligned fragment pairs allowing twists",
-                journal = "Bioinformatics",
-                year = "2003" }
+@article{fatcat,
+  title={Flexible structure alignment by chaining aligned fragment pairs allowing twists},
+  author={Ye, Yuzhen and Godzik, Adam},
+  journal={Bioinformatics},
+  volume={19},
+  number={suppl 2},
+  pages={ii246--ii255},
+  year={2003},
+  publisher={Oxford Univ Press}
+}
+
                 
-@article{ dali,
-          author = "Liisa Holm, Chris Sander",
-          title = "Dali: a network tool for protein structure comparison",
-          journal = "Trends in Biomedical Sciences",
-          year = "1995"}
           
 @article{pdbefold,
   title={Secondary-structure matching (SSM), a new tool for fast protein structure alignment in three dimensions},
@@ -118,4 +119,47 @@
   pages={2302--2309},
   year={2005},
   publisher={Oxford Univ Press}
+}
+
+@book{junker2011analysis,
+  title={Analysis of biological networks},
+  author={Junker, Bj{\"o}rn H and Schreiber, Falk},
+  volume={2},
+  year={2011},
+  publisher={John Wiley \& Sons}
+}
+
+@book{karp1972reducibility,
+  title={Reducibility among combinatorial problems},
+  author={Karp, Richard M},
+  year={1972},
+  publisher={Springer}
+}
+
+@article{holm1993protein,
+  title={Protein structure comparison by alignment of distance matrices},
+  author={Holm, Liisa and Sander, Chris},
+  journal={Journal of molecular biology},
+  volume={233},
+  number={1},
+  pages={123--138},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@article{shindyalov1998protein,
+  title={Protein structure alignment by incremental combinatorial extension (CE) of the optimal path.},
+  author={Shindyalov, Ilya N and Bourne, Philip E},
+  journal={Protein engineering},
+  volume={11},
+  number={9},
+  pages={739--747},
+  year={1998},
+  publisher={Oxford Univ Press}
+}
+
+@article{bakirova2013comparison,
+  title={Comparison of protein topology graphs using graphlet-based methods},
+  author={Bakirova, Tatiana and Sch{\"a}fer, Tim and Koch, Ina},
+  journal={GCB 2013 G{\"o}ttingen-Poster Abstracts}
 }
