--- a/arbeit.tex
+++ b/arbeit.tex
@@ -96,10 +96,10 @@ Im abschlie"senden Teil \emph{Diskussion und Ausblick} wird versucht, die Frage 
 
 \chapter{Materialien und Methoden}
 
-TODO: Einleitung des MatMeth-Teils \"uberarbeiten
+%TODO: Einleitung des MatMeth-Teils \"uberarbeiten
 
 
-Um die Proteinstrukturtopologien aus der PTGL zu vergleichen wurde das Programm \texttt{graphletAnalyser} genutzt und erweitert. Es wurde bereits 2013 von \textit{Tatiana Bakirova} im Rahmen ihrer Diplomarbeit im Arbeitskreis \textit{Molekulare Bioinformatik} geschrieben. Die urspr\"ungliche Funktionalit\"at wurde erweitert. Hierbei wurden Funktionen zur Analyse von Komplexgraphen, Aminos\"auregraphen und den Sekund\"arstrukturgraphen implemetiert. Diese Graphen stammen allesamt aus der PTGL (\underline{P}rotein \underline{T}opology \underline{G}raph \underline{L}ibrary) von Tim Sch\"afer.
+%Um die Proteinstrukturtopologien aus der PTGL zu vergleichen wurde das Programm \texttt{graphletAnalyser} genutzt und erweitert. Es wurde bereits 2013 von \textit{Tatiana Bakirova} im Rahmen ihrer Diplomarbeit im Arbeitskreis \textit{Molekulare Bioinformatik} geschrieben. Die urspr\"ungliche Funktionalit\"at wurde erweitert. Hierbei wurden Funktionen zur Analyse von Komplexgraphen, Aminos\"auregraphen und den Sekund\"arstrukturgraphen implemetiert. Diese Graphen stammen allesamt aus der PTGL (\underline{P}rotein \underline{T}opology \underline{G}raph \underline{L}ibrary) von Tim Sch\"afer.
 
 
 \section{PTGL}
@@ -264,6 +264,7 @@ PDB-ID & CATH-ID        & Klassifizierung      \\ \hline
 2w0i   & 3.40.20.10  & Transferase             \\ 
 \hline
 \end{tabular}
+\caption{PDB-Eintr\"age der ersten Fallstudie. Die PDB-IDs sind mit dem CATH-Code der zugeh\"origen homologen Superfamilie und der klassifizierung aus dem \textit{Header} der PDB-Datei eingetragen}
 \end{table}
 
 F\"ur diesen Datensatz wurden alle \textit{Graphlet}-Vektoren berechnet. Die paarweisen Distanzen dieser Vektoren zueinander wurden mit der RGF und dem modifizierten Jaccard-Index berechnet. F\"ur die berechneten Distanzmatrizen wurden die Korrelationen der Distanzen in den verschiedenen Formaten berechnet und sie wurden mit den von PDBeFold berechneten Distanzen verglichen. 
@@ -277,33 +278,34 @@ Weiterhin wurde darauf geachtet, diese Proteine so auszuw\"ahlen, dass die Analy
 
 
 
-\subsubsection{Zusammengefasst}
 
-\begin{tabular}{l r}
 
-PDB-ID & CATH-Code  \\
-2UTG & 1.10.210.10  \\ % uteroglobin - pdb-klasse: steroid bindend
-1VIB & 1.10.287.120 \\ % neurotoxin - pdb-klasse: neurotoxin
-1QPU & 1.20.120.10  \\ % Cytochrom b
-1QQ3 & 1.20.120.10  \\ % cytochrom b oxidiert
-2XL6 & 1.20.120.10  \\ % cytochrom c mit NO
-2YL1 & 1.20.120.10  \\ % cytochrom c mit CO
-1rxq & 1.20.120.450 \\ % metall abhaengige hydrolase - pdb-head: metall abhaengiges protein
-2qe9 & 1.20.120.450 \\ % metall abhaengige hydrolase - pdb-head: hydrolase
-2RD9 & 1.20.120.450 \\ % metall abhaengige hydrolase - pdb-head: hydrolase
-1M4R & 1.20.1250.10 \\ % interleukin 22 - pdb-head: cytokin
-1HGU & 1.20.1250.10 \\ % wachstumshormon - pdb-head: hormon
-1PV6 & 1.20.1250.20 \\ % lactose permease - pdb-head: transportprotein
-1AWR & 2.40.100.10  \\ % enzymkomplex cypa und hagpia ?
-1D9C & 1.20.1250.10 \\ % BOVINE INTERFERON-GAMMA
-1NGL & 2.40.128.20  \\ % transportprotein
-1N7V & 2.105.10.10  \\ % riesiges Virusprotein - rezeptor bindendes protein
-7TIM & 3.20.20.70   \\ % triosephosphat isomerase phosphat-komplex
-1NEY & 3.20.20.70   \\ % triosephosphat isomerase DHAP-komplex
-2V5L & 3.20.20.70   \\ %  TRYPANOSOMAL TRIOSEPHOSPHATE ISOMERASE - neue kristallform
-1V3Z & 3.30.70.100  \\ % Acylphosphatase
-1A17 & 1.25.40.10   \\ % pdb-header sagt hydrolase - muesste anderen hydrolasen aehnlich sein
-1ar0 & 3.10.450.50  \\ % Nuclear transport factor 2
+\begin{tabular}{ | c || c | c | }
+
+\hline
+PDB-ID & CATH-ID  \\ \hline
+2UTG & 1.10.210.10  \\ \hline % uteroglobin - pdb-klasse: steroid bindend
+1VIB & 1.10.287.120 \\ \hline % neurotoxin - pdb-klasse: neurotoxin
+1QPU & 1.20.120.10  \\ \hline % Cytochrom b
+1QQ3 & 1.20.120.10  \\ \hline % cytochrom b oxidiert
+2XL6 & 1.20.120.10  \\ \hline % cytochrom c mit NO
+2YL1 & 1.20.120.10  \\ \hline% cytochrom c mit CO
+1rxq & 1.20.120.450 \\ \hline% metall abhaengige hydrolase - pdb-head: metall abhaengiges protein
+2qe9 & 1.20.120.450 \\ \hline% metall abhaengige hydrolase - pdb-head: hydrolase
+2RD9 & 1.20.120.450 \\ \hline% metall abhaengige hydrolase - pdb-head: hydrolase
+1M4R & 1.20.1250.10 \\ \hline% interleukin 22 - pdb-head: cytokin
+1HGU & 1.20.1250.10 \\ \hline% wachstumshormon - pdb-head: hormon
+1PV6 & 1.20.1250.20 \\ \hline% lactose permease - pdb-head: transportprotein
+1AWR & 2.40.100.10  \\ \hline% enzymkomplex cypa und hagpia ?
+1D9C & 1.20.1250.10 \\ \hline% BOVINE INTERFERON-GAMMA
+1NGL & 2.40.128.20  \\ \hline% transportprotein
+1N7V & 2.105.10.10  \\ \hline% riesiges Virusprotein - rezeptor bindendes protein
+7TIM & 3.20.20.70   \\ \hline% triosephosphat isomerase phosphat-komplex
+1NEY & 3.20.20.70   \\ \hline% triosephosphat isomerase DHAP-komplex
+2V5L & 3.20.20.70   \\ \hline%  TRYPANOSOMAL TRIOSEPHOSPHATE ISOMERASE - neue kristallform
+1V3Z & 3.30.70.100  \\ \hline% Acylphosphatase
+1A17 & 1.25.40.10   \\ \hline% pdb-header sagt hydrolase - muesste anderen hydrolasen aehnlich sein
+1ar0 & 3.10.450.50  \\ \hline% Nuclear transport factor 2
 
 \end{tabular}
 
