--- a/arbeit.tex
+++ b/arbeit.tex
@@ -583,7 +583,7 @@ Diese Zusammenfassung lie"se sich dadurch bewerkstelligen, dass man die Funktion
 
 \subsection{\textit{Graphlet}-Motive}
 
-\subsection{Klassifizierung mit \textit{Support-Vector-Machines}}
+\subsection{Klassifizierung mit \textit{Support-Vector-Machines} und Entscheidungsb\"aumen}
 
 
 
